# WAL

./: .gitmodules  CMakeLists.txt  README.md
CMake/: TargetUseWAL.cmake
Samples/: CMakeLists.txt
Samples/InitWAL/: CMakeLists.txt
Samples/InitWAL/Source/: Main.cpp
WAL/: CMakeLists.txt
WAL/ConfigurationFiles/WAL/: .BuildInfo
WAL/Source/WAL/: API.cpp  API.h  AbstractObject.h  Event.cpp  Event.h  Exception.h  Flag.cpp  Flag.h  FlagManager.cpp  FlagManager.h  Log.cpp  Log.h  Singleton.h  StandardWindow.cpp  StandardWindow.h  Types.h  Utils.h  WAL.h  Window.cpp  Window.h
WAL/Source/WAL/Windows/: API.cpp  API.h  Helper.cpp  Helper.h  StandardWindow.cpp  StandardWindow.h  Windows.h
